// JD-based CV screening and ranking — 14-table proposed schema.
// Requirements: US-01–US-17. Design only, no deployed DB or migrations.
// Additional constraints and JSON contracts: docs/database-design.md.
Project cv_screening {
  database_type: 'PostgreSQL'
}

Enum job_status {
  draft
  open
  closed
}

Enum requirement_kind {
  skill
  experience
  education
}

Enum requirement_type {
  mandatory
  preferred
}

Enum degree_level {
  vocational
  college
  bachelor
  master
  doctorate
}

Enum parse_status {
  uploaded
  parsing
  parsed
  parse_failed
}

Enum run_status {
  queued
  running
  completed
  completed_with_errors
  failed
}

Enum item_status {
  pending
  processing
  succeeded
  failed
}

Enum extraction_job_status {
  queued
  running
  succeeded
  failed
}

Enum decision_status {
  scored
  shortlisted
  rejected
}

Enum match_status {
  matched
  partial
  missing
}

Table skills {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  category varchar(50)
  Note: 'Versioned aliases live in configuration; snapshots retain canonical names and dictionary version.'
}

Table jobs {
  id bigint [pk, increment]
  title varchar(200) [not null]
  level varchar(50)
  jd_raw_text text [not null]
  status job_status [not null, default: 'draft']
  criteria_revision integer
  published_run_id bigint
  created_at timestamptz [not null, default: `now()`]
  indexes {
    (status, created_at)
  }
  checks {
    `length(trim(title)) > 0 AND length(trim(jd_raw_text)) > 0`
  }
  Note: 'Stored lifecycle is display/filter only. New positions start draft. published_run_id is authoritative; criteria_revision is latest approved revision.'
}

Table job_criteria_versions {
  id bigint [pk, increment]
  job_id bigint [not null]
  revision integer [not null]
  jd_snapshot text [not null]
  dictionary_version varchar(100) [not null]
  approved_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  indexes {
    (job_id, revision) [unique]
    (id, job_id) [unique]
  }
  checks {
    `revision > 0`
  }
  Note: 'approved_at NULL denotes draft. Approval freezes this row and its criteria; validates positive weights summing to 100. See database-design.md.'
}

Table job_requirements {
  id bigint [pk, increment]
  criteria_version_id bigint [not null]
  criterion_key varchar(100) [not null]
  kind requirement_kind [not null]
  skill_id bigint
  canonical_skill_name varchar(100)
  label varchar(255) [not null]
  req_type requirement_type [not null]
  weight decimal(5,2) [not null]
  min_years numeric
  min_degree degree_level
  source varchar(20) [not null]
  jd_evidence jsonb
  indexes {
    (criteria_version_id, criterion_key) [unique]
    (criteria_version_id, skill_id) [unique]
    (id, criteria_version_id) [unique]
  }
  checks {
    `weight >= 0 AND weight <= 100`
    `(kind = 'skill' AND skill_id IS NOT NULL AND canonical_skill_name IS NOT NULL AND min_years IS NULL AND min_degree IS NULL) OR (kind = 'experience' AND skill_id IS NULL AND min_years IS NOT NULL AND min_years > 0 AND min_degree IS NULL) OR (kind = 'education' AND skill_id IS NULL AND min_years IS NULL AND min_degree IS NOT NULL)`
    `source IN ('manual', 'ai')`
  }
  Note: 'criterion_key is stable across revisions within a position. At most one experience and one education criterion per revision; see companion partial indexes.'
}

Table candidates {
  id bigint [pk, increment]
  full_name varchar(150)
  email varchar(150)
  phone varchar(30)
  created_at timestamptz [not null, default: `now()`]
  Note: 'Identity only. No automatic merge by name or email. Nullable identity permits an unresolved candidate before parsing (D-02).'
}

Table resumes {
  id bigint [pk, increment]
  candidate_id bigint [not null]
  version integer [not null]
  file_name varchar(255) [not null]
  object_key varchar(500) [not null, unique]
  file_hash char(64) [not null, unique]
  media_type varchar(100) [not null]
  size_bytes bigint [not null]
  status parse_status [not null, default: 'uploaded']
  error_code varchar(100)
  created_at timestamptz [not null, default: `now()`]
  indexes {
    (candidate_id, version) [unique]
  }
  checks {
    `version > 0 AND size_bytes > 0 AND size_bytes <= 10485760`
  }
  Note: 'Immutable original file/version. Global hash reuse still requires position membership. Technical failure never produces a zero score.'
}

Table position_resumes {
  job_id bigint [not null]
  resume_id bigint [not null]
  uploaded_at timestamptz [not null, default: `now()`]
  indexes {
    (job_id, resume_id) [pk]
  }
  Note: 'Accepted CV membership before scoring; same CV once per position. Q11 scoped lookup starts here.'
}

Table resume_snapshots {
  id bigint [pk, increment]
  resume_id bigint [not null]
  raw_text text [not null]
  extraction jsonb [not null]
  parser_version varchar(100) [not null]
  model_version varchar(100) [not null]
  prompt_version varchar(100) [not null]
  schema_version varchar(100) [not null]
  dictionary_version varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]
  indexes {
    (id, resume_id) [unique]
  }
  Note: 'Immutable validated extraction; includes employment, education and source mapping. Criteria-only rescore reuses exact snapshot ID.'
}

Table resume_extraction_jobs {
  id bigint [pk, increment]
  job_id bigint [not null]
  resume_id bigint [not null]
  trigger_source varchar(20) [not null]
  status extraction_job_status [not null, default: 'queued']
  extraction_config jsonb [not null]
  attempts integer [not null, default: 0]
  max_attempts integer [not null, default: 3]
  available_at timestamptz [not null, default: `now()`]
  lease_owner varchar(200)
  lease_expires_at timestamptz
  lease_token bigint [not null, default: 0]
  snapshot_id bigint [unique]
  error_code varchar(100)
  created_at timestamptz [not null, default: `now()`]
  started_at timestamptz
  finished_at timestamptz
  updated_at timestamptz [not null, default: `now()`]
  indexes {
    (id, resume_id) [unique]
    (status, available_at, created_at)
    (status, lease_expires_at)
    (job_id, resume_id, created_at)
  }
  checks {
    `trigger_source IN ('upload', 'reprocess', 'screening')`
    `max_attempts = 3 AND attempts >= 0 AND attempts <= max_attempts AND lease_token >= 0`
    `status <> 'running' OR (attempts > 0 AND lease_token > 0)`
    `status <> 'queued' OR attempts < max_attempts`
    `(status = 'running' AND lease_owner IS NOT NULL AND lease_expires_at IS NOT NULL) OR (status <> 'running' AND lease_owner IS NULL AND lease_expires_at IS NULL)`
    `(status IN ('succeeded', 'failed') AND finished_at IS NOT NULL) OR (status IN ('queued', 'running') AND finished_at IS NULL)`
    `(status = 'succeeded' AND snapshot_id IS NOT NULL AND error_code IS NULL) OR (status <> 'succeeded' AND snapshot_id IS NULL)`
    `status <> 'failed' OR error_code IS NOT NULL`
    `(attempts = 0 AND started_at IS NULL) OR (attempts > 0 AND started_at IS NOT NULL)`
  }
  Note: 'Durable CV extraction, separate from scoring. One active job per resume globally uses a partial unique index. job_id is originating membership, not authorization for other positions. Frozen config, fenced atomic completion, retry and command replay rules: docs/architecture/extraction-jobs.md.'
}

Table resume_skills {
  id bigint [pk, increment]
  snapshot_id bigint [not null]
  skill_id bigint
  canonical_name varchar(100)
  raw_text varchar(255) [not null]
  evidence jsonb [not null]
  confidence numeric
  indexes {
    (snapshot_id, skill_id) [unique]
  }
  checks {
    `confidence IS NULL OR (confidence >= 0 AND confidence <= 1)`
  }
  Note: 'Immutable normalized projection of snapshot skill facts and evidence of use. Unmapped skill_id may be NULL.'
}

Table screening_runs {
  id bigint [pk, increment]
  job_id bigint [not null]
  round integer [not null]
  base_run_id bigint
  criteria_version_id bigint [not null]
  policy_version varchar(100) [not null]
  policy_snapshot jsonb [not null]
  status run_status [not null, default: 'queued']
  idempotency_key varchar(200) [not null]
  payload_hash char(64) [not null]
  lease_owner varchar(200)
  lease_expires_at timestamptz
  lease_token bigint [not null, default: 0]
  error_code varchar(100)
  created_at timestamptz [not null, default: `now()`]
  started_at timestamptz
  finished_at timestamptz
  published_at timestamptz
  indexes {
    (job_id, round) [unique]
    (job_id, idempotency_key) [unique]
    (id, job_id) [unique]
    (id, criteria_version_id) [unique]
  }
  checks {
    `round > 0 AND lease_token >= 0`
    `base_run_id IS NULL OR base_run_id <> id`
  }
  Note: 'Frozen input/policy. One active run per position requires companion partial index. Counts derive from items. base_run_id is source for criteria-only rescore.'
}

Table screening_run_items {
  run_id bigint [not null]
  job_id bigint [not null]
  resume_id bigint [not null]
  snapshot_id bigint
  extraction_job_id bigint
  status item_status [not null, default: 'pending']
  attempts integer [not null, default: 0]
  error_code varchar(100)
  error_phase varchar(50)
  updated_at timestamptz [not null, default: `now()`]
  indexes {
    (run_id, resume_id) [pk]
    (run_id, status)
  }
  checks {
    `attempts >= 0`
    `status <> 'succeeded' OR snapshot_id IS NOT NULL`
  }
  Note: 'Frozen CV selection. Initial run assigns validated snapshot after extraction; rescore reuses successful source pairs. Safe error codes only.'
}

Table screenings {
  id bigint [pk, increment]
  run_id bigint [not null]
  job_id bigint [not null]
  resume_id bigint [not null]
  criteria_version_id bigint [not null]
  total_score numeric [not null]
  displayed_total decimal(5,2) [not null]
  skill_score numeric
  experience_score numeric
  education_score numeric
  semantic_score numeric
  passed_mandatory boolean [not null]
  rank_in_job integer [not null]
  summary text
  status decision_status [not null, default: 'scored']
  result_version bigint [not null, default: 1]
  decision_at timestamptz
  scored_round integer [not null]
  is_latest boolean [not null, default: false]
  scored_at timestamptz [not null, default: `now()`]
  indexes {
    (run_id, resume_id) [unique]
    (id, criteria_version_id) [unique]
    (run_id, rank_in_job) [unique]
  }
  checks {
    `total_score >= 0 AND total_score <= 100 AND displayed_total >= 0 AND displayed_total <= 100`
    `semantic_score IS NULL`
    `result_version > 0 AND rank_in_job > 0 AND scored_round > 0`
    `(status = 'scored' AND decision_at IS NULL) OR (status IN ('shortlisted', 'rejected') AND decision_at IS NOT NULL)`
  }
  Note: 'Successful results only. numeric retains calculation precision. displayed_total controls ranking. scored_round mirrors run.round; is_latest is transactional compatibility projection. Semantic always NULL in v1.'
}

Table screening_details {
  id bigint [pk, increment]
  screening_id bigint [not null]
  criteria_version_id bigint [not null]
  job_requirement_id bigint [not null]
  status match_status [not null]
  criterion_passed boolean [not null]
  reason_code varchar(100) [not null]
  reason text [not null]
  score_contribution numeric [not null]
  displayed_contribution decimal(5,2) [not null]
  evidence jsonb [not null]
  indexes {
    (screening_id, job_requirement_id) [unique]
  }
  checks {
    `score_contribution >= 0 AND displayed_contribution >= 0`
  }
  Note: 'Immutable criteria reference, reasons and validated source spans. Store pre-rounding contribution separately from displayed value.'
}

Ref: job_criteria_versions.job_id > jobs.id [delete: restrict]
Ref: jobs.(id, criteria_revision) > job_criteria_versions.(job_id, revision) [delete: restrict]
Ref: jobs.(published_run_id, id) > screening_runs.(id, job_id) [delete: restrict]
Ref: job_requirements.criteria_version_id > job_criteria_versions.id [delete: restrict]
Ref: job_requirements.skill_id > skills.id [delete: restrict]
Ref: resumes.candidate_id > candidates.id [delete: restrict]
Ref: position_resumes.job_id > jobs.id [delete: restrict]
Ref: position_resumes.resume_id > resumes.id [delete: restrict]
Ref: resume_snapshots.resume_id > resumes.id [delete: restrict]
Ref: resume_extraction_jobs.(job_id, resume_id) > position_resumes.(job_id, resume_id) [delete: restrict]
Ref: resume_extraction_jobs.(snapshot_id, resume_id) > resume_snapshots.(id, resume_id) [delete: restrict]
Ref: screening_run_items.(extraction_job_id, resume_id) > resume_extraction_jobs.(id, resume_id) [delete: restrict]
Ref: resume_skills.snapshot_id > resume_snapshots.id [delete: restrict]
Ref: resume_skills.skill_id > skills.id [delete: restrict]
Ref: screening_runs.job_id > jobs.id [delete: restrict]
Ref: screening_runs.(criteria_version_id, job_id) > job_criteria_versions.(id, job_id) [delete: restrict]
Ref: screening_runs.(base_run_id, job_id) > screening_runs.(id, job_id) [delete: restrict]
Ref: screening_run_items.(run_id, job_id) > screening_runs.(id, job_id) [delete: restrict]
Ref: screening_run_items.(job_id, resume_id) > position_resumes.(job_id, resume_id) [delete: restrict]
Ref: screening_run_items.(snapshot_id, resume_id) > resume_snapshots.(id, resume_id) [delete: restrict]
Ref: screenings.(run_id, job_id) > screening_runs.(id, job_id) [delete: restrict]
Ref: screenings.(run_id, resume_id) > screening_run_items.(run_id, resume_id) [delete: restrict]
Ref: screenings.(run_id, criteria_version_id) > screening_runs.(id, criteria_version_id) [delete: restrict]
Ref: screening_details.(screening_id, criteria_version_id) > screenings.(id, criteria_version_id) [delete: restrict]
Ref: screening_details.(job_requirement_id, criteria_version_id) > job_requirements.(id, criteria_version_id) [delete: restrict]
